--- a/modules/core/client/styles/components.scss
+++ b/modules/core/client/styles/components.scss
@@ -105,17 +105,27 @@ $tag-height: 3rem;
 
 /* Date Picker Popup */
 .datepicker {
-    .input-group-btn {
-        .btn {
-            padding: 0;
-            width: 3.6rem;
-            height: 3.4rem;
-        }
+    .datepicker-input {
+        position: relative;
 
-        .glyphicon {
-            top: 0.2rem;
-            margin-left: 0.2rem;
-            font-size: 1.8rem;
+        input:disabled {
+            background: #FFF;
+        }
+        
+        .calendar-btn {
+            position: absolute;
+            top: 0;
+            padding: 0;
+            width: 100%;
+            height: 3.4rem;
+            background: transparent;
+            text-align: right;
+
+            .glyphicon {
+                top: 0.2rem;
+                margin-right: 0.75rem;
+                font-size: 1.8rem;
+            }
         }
     }
 
