ESM-706: set default row for textarea to 10 for project updates

--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -68,7 +68,8 @@
 							id="message"
 							ui-tinymce="tinymceOptions"
 							ng-model="s.communication.templateContent"  
-							title="Message" 
+							title="Message"
+								  rows="10"
 							required ng-blur="activeItem = false"></textarea>
 					</div>
 				</div><!--/panel-body-->
