--- a/modules/documents/client/views/document-manager-edit.html
+++ b/modules/documents/client/views/document-manager-edit.html
@@ -86,7 +86,7 @@
 	</div>
 
 	<div class="modal-footer clearfix">
-		<button class="btn btn-default" ng-click="editFileProperties.cancel()">Cancel</button>
-		<button class="btn btn-primary" ng-disabled="!editFileForm.$valid" ng-click="editFileProperties.save(editFileForm.$valid)">Save</button>
+		<button class="btn btn-default" ng-disabled="editFileProperties.busy" ng-click="editFileProperties.cancel()">Cancel</button>
+		<button class="btn btn-primary" ng-disabled="!editFileForm.$valid || editFileProperties.busy" ng-click="editFileProperties.save(editFileForm.$valid)">Save</button>
 	</div>
 </form>
