--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -48,7 +48,7 @@
 
 	<div class="public-comment-panel panel panel-default">
 		<table ng-table="s.tableParams" show-filter="true" class="eao-comment-table table table-hover">
-			<tr class="comment-row" ng-repeat="o in $data" ng-click="s.detail(o)">
+			<tr class="comment-row clickable" ng-repeat="o in $data" ng-click="s.detail(o)">
 				<td class="id-col no-mobile" header-class="'id-col no-mobile'" ng-if="authentication.user" data-title="'ID'" sortable="'commentId'">
 					{{ ::o.commentId }}
 				</td>
