--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -38,6 +38,7 @@
 					<div class="checkbox">
 						<label>
 							<input type="checkbox"
+								ng-disabled="!s.currentUser"
 								ng-change="s.clickRole(s.currentUser, role, s.userRoleIndex.user[s.currentUser.username][role])"
 								ng-model="s.userRoleIndex.user[s.currentUser.username][role]">{{ role }}
 							</input>
@@ -69,6 +70,7 @@
 					<div class="checkbox">
 						<label>
               				<input type="checkbox"
+								ng-disabled="!s.currentRole"
                      			ng-change="s.clickUser(u, s.currentRole, s.userRoleIndex.role[s.currentRole][u.username])"
                      			ng-model="s.userRoleIndex.role[s.currentRole][u.username]">
               				</input>{{ u.displayName }}
@@ -84,5 +86,5 @@
 
 <div class="modal-footer">
 	<button class="btn btn-default" ng-click="s.cancel()">Cancel</button>
-	<button class="btn btn-primary" ng-click="s.ok()">OK</button>
+	<button class="btn btn-primary" ng-disabled="!s.dirty" ng-click="s.ok()">OK</button>
 </div>
