--- a/modules/documents/client/views/partials/pdf-viewer.html
+++ b/modules/documents/client/views/partials/pdf-viewer.html
@@ -1,6 +1,8 @@
 <div class="document-viewer-header">
 	<h1 title="{{documentName}}">{{documentName}}</h1>
 	<div class="actions">
+		<a class="btn icon-btn download" href="{{pdfURL}}" target="_self" title="Download File">
+			<span class="glyphicon glyphicon-download-alt"></span></a>
 		<button class="btn close" ng-click="closeWindow()" title="Close Window"><span aria-hidden="true">&times;</span></button>
 	</div>
 </div>
