ESM-726 - Upload Status Bar not Working in IE11
- Updated to ng-style for IE support.

--- a/modules/documents/client/views/document-manager-upload.html
+++ b/modules/documents/client/views/document-manager-upload.html
@@ -59,7 +59,7 @@
 										<span ng-if="f.progress == 100"> - {{f.status}}</span>
 									</div>
 									<div class="progress">
-										<div class="progress-bar" style="width:{{f.progress}}%" title="{{f.progress}}%" role="progressbar"></div>
+										<div class="progress-bar" ng-style="{'width' : f.progress + '%'}" title="{{f.progress}}%" role="progressbar"></div>
 									</div>
 								</div>
 								<button class="btn icon-btn"
