--- a/modules/project-comments/client/views/public-comments/add.html
+++ b/modules/project-comments/client/views/public-comments/add.html
@@ -11,7 +11,7 @@
 		<h4>Submitting Your Comments: How it Works</h4>
 		<p>All accepted comments submitted to the Environmental Assessment Office (EAO) will be published online within seven days of receipt. Comments are not accepted if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our  <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_blank">Public Comment Policy [PDF]</a>.</p>
 		<p>EAO forwards all accepted comments to the project proponent so they can be considered during the project's environmental assessment.</p>
-		<p>You may choose to provide your name and city/town when making a comment, but in order to have your name displayed with your comment; you must select the 'Make my Name visible to public' option. All hyperlinks in comments will be converted to plain text. All attachments must be in PDF format and limited to 5MB.</p>
+		<p>You may choose to provide your name and city/town when making a comment, but in order to have your name displayed with your comment; you must select the 'Make my Name visible to public' option. All hyperlinks in comments will be converted to plain text. All attachments must be no larger than <strong>5MB</strong>.</p>
 		<hr>
 		<p><strong>Privacy Policy</strong></p>
 		<p>Personal information collected through this comment period will inform the Environmental Assessment Office on the <em>{{project.name}} Project</em> under the authority of s.26 (c) and (e) of the <a href="http://www.bclaws.ca/Recon/document/ID/freeside/96165_00" target="_blank">Freedom of Information and Protection of Privacy Act</a>. If you have any questions about the collection, use and disclosure of your personal information, please contact:</p>
@@ -56,7 +56,7 @@
 				<div class="upload-attachments form-group no-margin col-sm-12">
 					<label class="control-label">Upload Attachments</label>
 					<div class="alert alert-danger" ng-show="s.showAlert">
-						Attachments must be in <strong>PDF format</strong> and limited to <strong>5MB</strong>.
+						All attachments must be no larger than <strong>5MB</strong>.
 						<button type="button" class="close">
 							<span ng-click="s.closeAlert()">&times;</span>
 						</button>
@@ -75,7 +75,7 @@
 								<div class="fb-upload-target-content">
 									<span class="glyphicon glyphicon-open icon-default"></span>
 									<span class="fb-upload-target-msg"><b>Drag &amp; Drop</b> or <b>browse files</b> to upload.</span>
-									<span class="fb-upload-req-msg">PDF format only and limited to 5MB.</span>
+									<span class="fb-upload-req-msg">Size limited to 5MB.</span>
 								</div>
 								<div class="fb-upload-target-border"></div>
 							</div>
