--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -1,54 +1,246 @@
 
 <ui-view class="main-panel home-view" id="main-content-section">
 
-	<!-- BEGIN: MEM DECRIPTION PANEL -->
-	<div class="panel panel-default" ng-if="false" ng-show="environment === 'MEM' && !authentication.user">
-		<div class="panel-heading">
-			<h3 class="panel-title">Public Project Listing</h3>
-		</div>
-		<div class="panel-body">
-			<p>The Ministry of Energy and Mines (MEM) is committed to making information on permitted mine sites in British Columbia more accessible to interested parties. MEM has collaborated with the BC Environmental Assessment Office (EAO) to develop a new platform and has to date posted the following information online:</p>
-			<ul>
-				<li>Permits and amendments for major mines that are currently operating or under construction</li>
-				<li>MEM inspection reports (2013 onwards) for major mines that are currently operating or under construction</li>
-			</ul>
-			<p>In the coming months, the following information will be posted:</p>
-			<ul>
-				<li>Permits and amendments for all major mines in BC (i.e., closed mines and mines in care and maintenance in addition to those that are currently operating/under construction)</li>
-				<li>Dam safety inspections/reviews for permitted major mines (2013 onwards)</li>
-				<li>Annual reclamation reports for permitted major mines (2013 onwards)</li>
-			</ul>
-			<p>More documents will be posted in future phases of this initiative; this first phase is limited to documents that meet the specifications above and are currently available electronically. Requests for specific documents not available via this web platform can be directed to the Ministry of Energy and Mines and/or to the Office of the Chief Information Officer (for requests made under the Freedom of Information and Protection of Privacy Act).</p>
-		</div>
-	</div>
-	<!-- END: MEM DESCRIPTION PANEL -->
+        <header id="header">
+            <div class="brand-container">
+                <a class="brand" href="index.html"></a>
+                <button class="navbar-toggler float-right collapsed" type="button" 
+                    data-toggle="collapse" 
+                    data-target="#mainNav" 
+                    aria-controls="mainNav" 
+                    aria-expanded="false" 
+                    aria-label="Toggle navigation"><i class="material-icons">menu</i><span>MENU</span>
+                </button>
+            </div>
+            <nav class="navbar navbar-toggleable-md main-nav">
+                <div class="collapse navbar-collapse" id="mainNav">
+                    <ul class="navbar-nav">
+                        <!--
+                        <li class="nav-item"><a class="nav-link">Find Mines in British Columbia</span></a></li>
+                        -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="aboutMMTI" 
+                                data-toggle="dropdown" 
+                                aria-haspopup="true" 
+                                aria-expanded="false"><span>Mining in British Columbia</span>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="aboutMMTI">
+                                <a class="dropdown-item" href="mining-lifecycle.html">
+                                    <strong>The Mining Lifecycle</strong>
+                                    <span class="dd-item-desc">It can take decades to develop a deposit into a mine, which in turn can operate for decades.</span></a>
+                                <a class="dropdown-item" href="topics-of-interest.html">
+                                    <strong>Topics of Interest</strong>
+                                    <span class="dd-item-desc">Tailings Management, Water Quality, Reclamation &amp; Securities</span>
+                                </a>
+                                <a class="dropdown-item" href="#">
+                                    <strong>Find Mines in BC</strong>
+                                    <span class="dd-item-desc">The BC Mine Information website’s interactive map currently includes 10 mine sites.</span></a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="aboutMMTI" 
+                                data-toggle="dropdown" 
+                                aria-haspopup="true" 
+                                aria-expanded="false"><span>Our Processes &amp; Procedures</span>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="aboutMMTI">
+                                <a class="dropdown-item" href="legislation.html">
+                                    <strong>Legislation</strong>
+                                    <span class="dd-item-desc">Learn about the key statutes and regulations that apply to all mining activities in the Province of British Columbia.</span></a>
+                                <a class="dropdown-item" href="authorizations.html">
+                                    <strong>Authorizations</strong>
+                                    <span class="dd-item-desc">Environmental assessment certificates and permits issued under the Mines Act and Environmental Management Act.</span></a>
+                                <a class="dropdown-item" href="compliance-oversight.html">
+                                    <strong>Compliance Oversight</strong>
+                                    <span class="dd-item-desc">Several provincial agencies work together to provide integrated oversight of British Columbia’s mines.</span></a>
+                            </div>
+                        </li>
+                        <li class="nav-item"><a class="nav-link"><span>Connect With Us</span></a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 
-	<div class="row">
-		<div></div>
-		<div class="col-sm-4 col-md-4 col-lg-3">
-			<div class="news-feed panel panel-default" ng-init="form.expandnews = false">
-				<div class="panel-heading"><h2>News & Announcements</h2></div>
-				<div class="panel-body">
-					<tmpl-recent-activity id="anchor-recent" x-form="form"></tmpl-recent-activity>
-				</div>
-				<div class="panel-footer">
-					<a class="show-all-news-link btn btn-link" href="/news">View all News & Announcements</a>
-				</div>
-			</div>
-		</div>
+        <div class="hero-banner landing-pg-banner">
+            <div class="container">
+                <div class="container-inner">
+                    <div class="hb-txt">
+                        <h1>British Columbia <span>Mine Information</span><span class="badge" id="alpha" title="What is this?">Alpha 2.0</span></h1>
+                        <p>Mining is one of British Columbia’s oldest and most dynamic industries. The Province of British Columbia is committed to continuing to provide effective oversight of this important sector.</p>
+                        <div class="hb-btns">
+                            <a class="btn slide-l-btn hero-btn inverted" href="mine-list.html"><i class="material-icons">list</i><span>View List</span></a>
+                            &nbsp;&nbsp;<span>or</span>&nbsp;&nbsp;
+                            <a class="btn slide-l-btn hero-btn inverted" href="mine.html"><i class="material-icons">map</i><span>View Map</span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-		<div class="col-sm-8 col-md-8 col-lg-9">
-			<div class="panel panel-default">
-				<tmpl-projects-map id="anchor-map" x-projects='projects'></tmpl-projects-map>
-			</div>
-		</div>
+        <main>
+            <div class="bg-default">
+                <div class="site-intro container">
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <section class="about-info">
+                                <h2>About BC Mine Information</h2>
+                                <p>The Ministry of Energy and Mines (MEM), the Ministry of Environment (ENV) and the Environmental Assessment Office (EAO) have collaborated to make information on the Province’s oversight of major mines in British Columbia more accessible than ever before.</p>
+                                <p>This is the first time mine-related information from all three agencies has been made available online in one place, and more information will be added on an ongoing basis.</p>
+                                <p>This site currently profiles 15 major mines across the province (7 operating metal mines, 6 operating coal mines, and 2 under construction metal mines). Other permitted major mines in BC will be added in the coming months.</p>
+                                <p class="mb-0">If you want to learn more about a major mine not yet included on this website, please visit <a href="https://mines.empr.gov.bc.ca" target="_blank">mines.empr.gov.bc.ca</a>.</p>
+                            </section>
+                        </div>
+                        <div class="col-lg-4">
+                            <section class="fast-facts">
+                                <h4>Fast Facts about the Mining Industry in British Columbia</h4>
+                                <ul class="row mb-0">
+                                    <li class="col-xs-12 col-sm-6 col-lg-12">
+                                        <div>
+                                            <span class="metric">$2<sup>B</sup></span>
+                                            <span class="metric-desc">2015 Production Value of Mining [ Natural Resources Canada Preliminary Estimate ]</span>
+                                        </div>
+                                    </li>
+                                    <li class="col-xs-12 col-sm-6 col-lg-12">
+                                        <div>
+                                            <span class="metric">$272<sup>M</sup></span>
+                                            <span class="metric-desc">2015 Industry Mineral Exploration Spending [ British Columbia Geological Survey ]</span>
+                                        </div>
+                                    </li>
+                                    <li class="col-xs-12 col-sm-6 col-lg-12">
+                                        <div>
+                                            <span class="metric">13</span>
+                                            <span class="metric-desc">Number of Operating Metal &amp; Coal Mines in British Columbia</span>
+                                        </div>
+                                    </li>
+                                    <li class=" col-xs-12 col-sm-6 col-lg-12">
+                                        <div>
+                                            <span class="metric">8</span>
+                                            <span class="metric-desc">Number of Mines Under Review by the Environmental Assessment Office</span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="fb-container bg-faded">
+                <section class="container">
+                    <h2>Mining in British Columbia</h2>
+                    <div class="row feature-blocks">
+                        <div class="col-md-4">
+                            <div class="feature-block">
+                                <h3>The Mining Lifecycle</h3>
+                                <p>It can take decades to develop a deposit into a mine, which in turn can operate for decades</p>
+                                <a class="btn inverted" href="mining-lifecycle.html">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature-block">
+                                <h3>Topics of Interest</h3>
+                                <p>Profiling key topics of interest regarding mining activities in British Columbia</p>
+                                <a class="btn inverted" href="topics-of-interest.html">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature-block">
+                                <h3>Find Mines in B.C.</h3>
+                                <p>The BC Mine Information website’s interactive map currently includes 15 mine sites</p>
+                                <a class="btn inverted" href="mine-list.html">View List</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
 
-	</div>
+            <div class="fb-container">
+                <section class="container mt-0">
+                    <h2>Our Processes &amp; Procedures</h2>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="feature-block">
+                                <h3>Legislation</h3>
+                                <p>Learn about the key statutes and regulations that apply to all mining activities in the Province of British Columbia</p>
+                                <a class="btn inverted" href="legislation.html">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature-block">
+                                <h3>Authorizations</h3>
+                                <p>Environmental assessment certificates and permits issued under the Mines Act and Environmental Management Act</p>
+                                <a class="btn inverted" href="authorizations.html">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature-block">
+                                <h3>Compliance Oversight</h3>
+                                <p>Several provincial agencies work together to provide integrated oversight of British Columbia’s mining sector</p>
+                                <a class="btn inverted" href="compliance-oversight.html">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
 
-	<div class="panel panel-default no-margin">
-		<div class="panel-heading"><h2>Mining Projects</h2></div>
-		<tmpl-projects-list2 id="anchor-list" x-projects="projects"></tmpl-projects-list2>
-	</div>
+        </main>
+        
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <section>
+                            <h4>About this website...</h4>
+                            <p class="mb-0">The Ministry of Energy and Mines (MEM), Ministry of Environment (MOE), and Environmental Assessment Office (EAO) have collaborated to make information on the Province’s oversight of major mines in British Columbia accessible to the public.</p>
+                        </section>
+                    </div>
+                    <div class="col-md-4">
+                        <section>
+                            <h4>Site Navigation</h4>
+                            <h5>About Mining in British Columbia</h5>
+                            <ul>
+                                <li>
+                                    <a href="#">The Mining Lifecycle</a>
+                                </li>
+                                <li>
+                                    <a href="#">Topics of Interest</a>
+                                </li>
+                                <li>
+                                    <a href="#">Find Mines in British Columbia</a>
+                                </li>
+                            </ul>
+                            <h5>Our Processes &amp; Procedures</h5>
+                            <ul class="mb-0">
+                                <li>
+                                    <a href="legislation.html">Legislation</a>
+                                </li>
+                                <li>
+                                    <a href="authorizations.html">Authorizations</a>
+                                </li>
+                                <li>
+                                    <a href="compliance-oversight.html">Compliance Oversight</a>
+                                </li>
+                            </ul>
+                        </section>
+                    </div>
+                    <div class="col-md-4">
+                        <section>
+                            <h4>Connect With Us</h4>
+                            <p class="mb-0">The BC Mine Information website is continuously evolving. More information and features will be added to the site on an ongoing basis. We welcome feedback to help us decide what would be most valuable.</p>
+                            <ul class="connect-links mt-3 mb-0">
+                                <li><img src="icons/facebook_circle.svg"/></li>
+                                <li><img src="icons/twitter_circle.svg"/></li>
+                                <li><img src="icons/google_circle.svg"/></li>
+                            <ul>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </footer> 
+
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+        <script src="js/utils.js" type="text/javascript"></script>
 
 </ui-view>
 
