--- a/modules/projects/client/views/project-partials/project.entry.html
+++ b/modules/projects/client/views/project-partials/project.entry.html
@@ -263,26 +263,18 @@
 					<div class="col-md-4 form-group">
 						<label class="control-label" for="projectdirector">Name<em class="required">(Required)</em></label>
 						<input class="form-control" name="projectdirector" id="projectdirector"
-							   placeholder="{{ project.responsibleEPD }}" disabled />
+							ng-model="project.responsibleEPD" />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group">
 						<label class="control-label" for="projectdirectormmail">Email<em class="required">(Required)</em></label>
-						<input class="form-control"  name="projectdirectormmail" id="projectdirectormmail"
-							   placeholder="{{ project.responsibleEPDEmail }}" disabled />
+						<input class="form-control" placeholder="example@domain.com" name="projectdirectormmail" id="projectdirectormmail"
+							ng-model="project.responsibleEPDEmail"  />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group">
 						<label class="control-label" for="projectdirectorphone">Phone<em class="required">(Required)</em></label>
-						<input class="form-control"  name="projectdirectorphone" id="projectdirectorphone"
-							   placeholder="{{ project.responsibleEPDPhone }}" disabled/>
+						<input class="form-control" placeholder="e.g. (555) 555-5555" name="projectdirectorphone" id="projectdirectorphone"
+							ng-model="project.responsibleEPDPhone" />
 					</div>
-				</div>
-				<div class="form-group no-margin">
-					<button class="btn btn-default btn-sm" type="button"
-							x-user-search-chooser
-							x-title="'Set Executive Project Director'"
-							x-destination="saveEPD"
-							x-singleselectmode="true"
-							x-project="project">Set Executive Project Director</button>
 				</div>
 			</fieldset>
 			<fieldset>
@@ -291,26 +283,18 @@
 					<div class="col-md-4 form-group">
 						<label class="control-label" for="projectleadname">Name<em class="required">(Required)</em></label>
 						<input class="form-control" name="projectleadname" id="projectleadname"
-							   placeholder="{{ project.projectLead }}"  disabled />
+							ng-model="project.projectLead" />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group">
 						<label class="control-label" for="projectleademail">Email<em class="required">(Required)</em></label>
-						<input class="form-control"  name="projectleademail" id="projectleademail"
-							   placeholder="{{ project.projectLeadEmail }}" disabled/>
+						<input class="form-control" placeholder="example@domain.com" name="projectleademail" id="projectleademail"
+							ng-model="project.projectLeadEmail" />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group">
 						<label class="control-label" for="projectleadphone">Phone<em class="required">(Required)</em></label>
-						<input class="form-control" name="projectleadphone" id="projectleadphone"
-							   placeholder="{{ project.projectLeadPhone }}"  disabled />
+						<input class="form-control" placeholder="e.g. (555) 555-5555" name="projectleadphone" id="projectleadphone"
+							ng-model="project.projectLeadPhone" />
 					</div>
-				</div>
-				<div class="form-group no-margin">
-					<button class="btn btn-default btn-sm" type="button"
-							x-user-search-chooser
-							x-title="'Set Project Lead'"
-							x-destination="saveProjectLead"
-							x-singleselectmode="true"
-							x-project="project">Set Project Lead</button>
 				</div>
 			</fieldset>
 			<fieldset>
@@ -319,25 +303,17 @@
 					<div class="col-md-4 form-group">
 						<label class="control-label" for="celead">Name<em class="required">(Required)</em></label>
 						<input class="form-control" name="celead" id="celead"
-							   placeholder="{{ project.CELead }}"  disabled />
+							ng-model="project.CELead" />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group">
 						<label class="control-label" for="celeademail">Email<em class="required">(Required)</em></label>
-						<input class="form-control" name="celeademail" id="celeademail"
-							   placeholder="{{ project.CELeadEmail }}" disabled/>
+						<input class="form-control" placeholder="example@domain.com" name="celeademail" id="celeademail"
+							ng-model="project.CELeadEmail" />
 					</div>
 					<div class="col-sm-6 col-md-4 form-group">
 						<label class="control-label">Phone<em class="required">(Required)</em></label>
-						<input class="form-control"  name="cephone"
-							   placeholder="{{ project.CELeadPhone }}" disabled/>
-					</div>
-					<div class="form-group no-margin">
-						<button class="btn btn-default btn-sm" type="button"
-								x-user-search-chooser
-								x-title="'Set Compliance and Enforcement Lead'"
-								x-destination="saveCELead"
-								x-singleselectmode="true"
-								x-project="project">Set Compliance and Enforcement Lead</button>
+						<input class="form-control" placeholder="e.g. (555) 555-5555" name="cephone"
+							ng-model="project.CELeadPhone"/>
 					</div>
 				</div>
 			</fieldset>
